# wust-socket

./: .gitignore  Cargo.toml  README.md  justfile  server.py
src/: client.rs  error.rs  event.rs  inner.rs  lib.rs  main.rs  message.rs  ping.rs  role.rs  server.rs  structs.rs  websocket.rs  ws.rs
src/frame/: control.rs  data.rs  decode.rs  frame.rs  mod.rs  opcode.rs
src/frames/: control.rs  data.rs  decode.rs  mod.rs  opcode.rs
src/protocol/: mask.rs  message.rs  mod.rs  ping.rs
src/ws/: event.rs  frame_handler.rs  inner.rs  mod.rs  recv_loop.rs  websocket.rs
tests/: websocket_test.rs
