[package]
name = "wust-socket"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
clap = { version = "4.5.57", features = ["derive"] }
rand = "0.9.2"
sha1 = "0.10.6"
tokio = { version = "1.49.0", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"

[dev-dependencies]
paste = "1.0.15"
proptest = "1.9.0"

[features]
simd_masking = []

[profile.release]
debug = true
