[package]
name = "wust-socket"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
byteorder = "1.5.0"
bytes = "1.11.1"
clap = { version = "4.5.57", features = ["derive"] }
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-rs"] }
rand = "0.9.2"
rustls = "0.23.36"
sha1 = "0.10.6"
tokio = { version = "1.49.0", features = [
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-rustls = "0.26.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
webpki-roots = "1.0.6"

[dev-dependencies]
paste = "1.0.15"
proptest = "1.9.0"

[features]
simd_masking = []
autobahn = []

[profile.release]
debug = true
